# claude-multiagent-system

./: .overmind.env  .pre-commit-config.yaml  .system_pids  AGENT_REQUEST_MANAGEMENT_SYSTEM.md  ANALISI_EXECUTE_TOOL.md  API_DOCUMENTATION.md  CLAUDE.md  CLAUDE_MCP_FIX.md  CLAUDE_SQUAD_SUPERIORITY.md  CLAUDE_SQUAD_VISION.md  CLEANUP_SUMMARY.md  COMPLETE_INTEGRATION_README.md  CORREZIONE_MCP_COMPLIANCE.md  CORS_COMPLETE_SOLUTION.md  CORS_SOLUTION.md  CURRENT_STATUS.md  DASHBOARD_V2_ANALYSIS_REPORT.md  DEBUG_REPORT.md  DRAMATIQ_IMPLEMENTATION_WORKFLOW.md  Dockerfile  EXTRACTION_SUMMARY.md  FIGMA_CLAUDE_SETUP.md  FIGMA_DEV_MODE_SETUP.md  FIGMA_MCP_SETUP.md  FIGMA_REPLICATION_COMPLETE.md  FIGMA_TEST_COMMANDS.md  FINAL_MCP_COMPLETE_CONFIGURATION.json  FIXES_COMPLETED.md  FIX_MCP_CONNECTION.md  FRONTEND_API_MAPPING.md  FRONTEND_MCP_INTEGRATION.md  HOW_TO_TEST_MCP.md  IMPLEMENTAZIONE_COMPLETA_NO_MOCK.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  INTEGRATION_README.md  INTEGRATION_STATUS.md  INTEGRATION_STATUS_FINAL.md  INTEGRAZIONE_MCP_V2_FINALE.md  MCP_BRIDGE_ARCHITECTURE.md  (+204 more)
.auth/: auth.db
agents/: agent_bridge.py  agent_bridge_fixed.py  agent_bridge_old.py  database_agent.py  frontend_agent.py  intelligent_agent.py
api/: .system_pids  main.py  metrics_endpoint.py  unified_gateway.py
authorization/: authorization-system.sh
claude-ui/: .env  IMPLEMENTATION_ROADMAP.md  README.md  UX_UI_ANALYSIS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
config/: .orchestrator_bashrc  settings.py
core/: agent_coordinator.py  agent_router.py  auth_manager.py  circuit_breaker.py  claude_integration.py  claude_orchestrator.py  crewai_claude_bridge.py  (+17 more)
(+416 files in other folders)
